summary replaced abstract in NO chapter

--- a/chapter_conclusions.tex
+++ b/chapter_conclusions.tex
@@ -1,5 +1,13 @@
 \chapter{Conclusions and outlook}
+%The description of a~\gls{tmh} remains incomplete.
+%The understanding of~\gls{tmp} topology is erroneous, and despite a wealth of structures, the general model of helix-helix and helix-lipid interactions remains speculative and requires a great deal of intensive analysis to generate a working model of a particular~\gls{tmp}.
 \sloppy
+As the idea of positive residues inside the cytoplasm emerged during the late 1980s, so did the idea of negative residues working in concert with~\gls{tmh} orientation.
+It was shown that removing a single lysine residue reversed the topology of a model \textit{erichia coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}.
+One would also expect to see a skew in negatively charged distribution if a cooperation between oppositely charged residues orientated a~\gls{tmh}, however there is no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
+However, in \textit{E.
+coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
+In this chapter, we explore the literature surrounding charged residue distribution in the~\gls{tmh}, and demonstrate that the ``negative-outside'' skew exists in anchoring~\gls{tmh}s
 In this thesis we ellucidated the ``negative\--outside'' rule.
 Additionally we have made observations regarding how anchoring \gls{tmh}s are optimised to their membranes.
 This new insight into the bahviour of \gls{tmh}s will not only help us understand specific case in biology, but can also inform synthetic biology regarding \gls{tmp}s.
