--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -59,21 +59,21 @@ Currently, we are in a revolution of \gls{tmp} structural acquisition, which wil
 Membrane\--bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
 Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome~\cite{Hopkins2002, Almen2009, Wang2013} and account for 40\% of drug targets \cite{Overington2006} which reflects their biological and physiological importance.
 \gls{tmp}s allow biochemical pathways that traverse the various biological membranes used in life, either by transporting molecules or transducing signals across the bilayer.
-Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells and the mechanisms of folding are actively studied even recently revealing new systems of translocation \cite{Shurtleff2018}.
+Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells and the mechanisms of folding are actively studied even recently revealing new systems of translocation, such as the role of the \gls{emc} in both co\--translational \cite{Shurtleff2018} and post\--translational \cite{Guna2018} \gls{tmp} integration.
 Mutations tend to cluster in the \gls{tmh} regions of the genes \cite{Sanders2004}, which can cause the misfolding.
 Glycine to arginine mutations occur statistically more frequently in \gls{tmh}s compared to their globular $\alpha$\--helix counterparts \cite{Partridge2002}.
 This can result in a range of diseases including but not limited to cystic fibrosis caused by mutations in the cystic fibrosis conductance regulator \cite{Riordan1989}, Charcot\--Marie\---Tooth disease caused by mutations in the PMP22 gene \cite{Roa1993} and the connexin 32 gene \cite{Fairweather1994}, diabetes insipidus caused by mutations the aquaporin 2 water channel \cite{vanLieburg1994}, retinitis pigmentosa caused by a point mutation in rhodopsin \cite{Dryja1990}, and Niemann\--Pick disease that contains over 200 disease\--causing mutations identified \cite{Gelsthorpe2008, Park2003, Scott2004, Fernandez-Valero2005}.
 
 \subsection{The transmembrane protein problem}
 
-In a laboratory experiment \gls{tmp}s typically present several challenges for studying them \cite{Seddon2004}.
+Studying \gls{tmp}s in a laboratory typically presents several challenges not so often faced when investigating their globular counterparts which are pointed out in a review by Seddon \textit{et al.,} 2004~\cite{Seddon2004}.
 \gls{tmp}s are typically difficult to obtain in a useful quantity.
 They do not exist in high enough quantities naturally, and overexpression often results in aggregation in the cytoplasm.
 Also, the complexity of their native environments limits structural studies.
 Even relatively simple lipid bilayers cannot be probed by conventional structural techniques, so study in the native state by traditional structural methods is difficult and involves suspending the protein in detergent or lipid environments, leading to difficulties in sample preparations.
 Their insolubility in aqueous solutions also leads to the requirement of speciaised synthetic \textit{in vitro} systems to be used, which have been difficult to introduce purified proteins into \cite{Seddon2004}.
 
-In addition to the difficulties in studying \gls{tmp}s, it has become clear that they have a rich structural diversity.
+In addition to the practical difficulties in studying \gls{tmp}s, it has become clear that they have a rich structural diversity.
 Throughout the 1990s the concept of a \gls{tmh} was simple and fairly assured: they were greasy peptides of around 30{\AA} in length, often bundled together and oriented perpendicularly to the membrane \cite{VonHeijne2006}.
 By 2007, crystallography had elucidated 368 \gls{tmp} structures from 148 unique proteins \cite{Carpenter2008}.
 Whilst this accumulation of structures was exponential, at the same time, there were in excess of 50,000 protein structures in the PDB.
@@ -83,10 +83,10 @@ Even recently, there is a contingency in the  \gls{tmp} biology field that despi
 
 Furthermore, the insertion and formation of the unusually orientated \gls{tmh}s and of the more traditional \gls{tmh}s have been shown to be underpinned by complex thermodynamic equilibrium and electrostatic interactions~\cite{Cymer2015, Elisa2012, Ismail2015}.
 As well as being a biophysically convoluted system, \gls{tmh}s are biologically functional beyond anchoring in many cases.
-\gls{tms}s have been identified as regulators of protein quality control and trafficking mechanisms, shifting the idea away from \gls{tmh}s broadly exclusively functioning as anchors~\cite{Hessa2011}, and crucially this function beyond anchoring can be revealed by sensitive, careful analysis of the sequence information alone~\cite{Wong2011, Wong2012}.
+\gls{tms}s have been identified as regulators of protein quality control and trafficking mechanisms, shifting the idea away from \gls{tmh}s broadly exclusively functioning as anchors~\cite{Hessa2011}, and crucially this function beyond anchoring can be revealed by sensitive analysis of the sequence information alone~\cite{Wong2011, Wong2012}.
 
 There is also an issue of silent homology extension from $\alpha$\--helices \cite{Wong2010}.
-\gls{tmh}s share composition similarities due to membrane requirements and restraints, not necessarily due to common ancestry which underpins homology\--based domain libraries like Pfam \cite{Finn2016} and SMART \cite{Letunic2012}.
+\gls{tmh}s often share sequence composition similarities due to membrane requirements and restraints, not necessarily due to common ancestry which underpins homology\--based domain libraries like Pfam \cite{Finn2016} and SMART \cite{Letunic2012}.
 It was found that between 2.1\% and 13.6\% of Pfam hits for \gls{sp}s or \gls{tms}s are positive hits that were misreported as homologous among distantly related proteins in Pfam \cite{Wong2010}.
 %When predicting the function of any protein, one follows the dicta that function is facilitated by form, and form is determined by the sequence; the more similar the sequences, the more likely that the function is similar.
 %For globular soluble proteins having the same folds induces strict biochemical restrictions on the packing of a hydrophobic protein core which requires similarity of non\--polar residue patterns.
@@ -94,10 +94,8 @@ It was found that between 2.1\% and 13.6\% of Pfam hits for \gls{sp}s or \gls{tm
 %In the case of \gls{sp}s or \gls{tms}s the physical constraints are similar for all \gls{tmp}s and so matching is indeed merely a reflection of the physical environment of the bilayer, not the common ancestry.
 %it appears that between 2.1\% and 13.6\% of Pfam hits for \gls{sp}s or \gls{tms}s are indeed false positive results~\cite{Wong2010}.
 
-
-
 \subsection{The transmembrane protein revolution}\label{section:revolution}
-Over the last decade or so, several significant steps have been made toward overcoming the challenges in finding the structure of \gls{tmp}s.
+Over the last decade or so, several significant steps have been made toward overcoming the challenges in solving the structures of \gls{tmp}s.
 Firstly, improvements in expression and purification occurred thanks to cleavable green fluorescent protein (allowing protein tracking during purification) \cite{Drew2005, Kawate2006} and antibody tagging for purification \cite{Eshaghi2005} at the colony level \cite{Cornvik2005} greatly increased the throughput of \gls{tmp} expression and purification.
 
 \begin{figure}[ht!]
@@ -105,7 +103,7 @@ Firstly, improvements in expression and purification occurred thanks to cleavabl
 \includegraphics[width=1\textwidth]{Intro/revolution}
 		\captionof{figure}[The structure of SecYE in a nanodisc at near atomic resolution.]{\textbf{The structure of SecYE in a nanodisc at near atomic resolution.}
 		A single particle cryo\--\gls{em} structure of SecYE in complex with the ribosome (not shown) with the \gls{tmh}s held in a reconstituted nanodisc (PDB code 4v6m \cite{Frauenfeld2011}).
-		The resolution is 7.1 \angstrom.
+		The resolution is 7.1~\angstrom.
 		The protein structure is depicted by a rainbow coloured cartoon in the centre of the assembly.
 		The lipids are modelled as spherical atoms coloured by atom (carbon and hydrogen are white, oxygen is red and nitrogen is blue).
 		The peptide scaffold is shown in pink.
@@ -134,12 +132,11 @@ Due to the experimental difficulties of working with \gls{tmp}s, often it is onl
 
 Traditionally, the role of bioinformatics has been to predict \gls{tm} regions of a protein.
 There are countless methods that can perform this.
-Many rely on statistical patterns to identify \gls{tmh}s such as the neural network approach of MEMSAT3 \cite{Jones2007} Hidden Markov models used in TMHMM \cite{Krogh2001}, HMMTOP \cite{Tusnady2001}, S--TMHMM \cite{Viklund2004}, OCTOPUS \cite{Viklund2008}, Phobius \cite{Kall2004}.
+Many rely on statistical patterns to identify \gls{tmh}s such as the neural network approach of MEMSAT3 \cite{Jones2007} Hidden Markov models used in TMHMM \cite{Krogh2001}, HMMTOP \cite{Tusnady2001}, S\--TMHMM \cite{Viklund2004}, OCTOPUS \cite{Viklund2008}, Phobius \cite{Kall2004}.
 Unsatisfied with a statistical approach, Scampi seq \cite{Bernsel2008} uses a first principals method following the Kyte \& Doolittle suggestion 26 years previously that a biophysical scale can predict \gls{tmh}s \cite{Kyte1982} and applies a score based on the von Heijne biological scale \cite{Hessa2007}.
 
 Predicting the presence of a typical \gls{tmh} based on a protein sequence is currently a fairly trivial task and typically relies on a consensus of several prediction programs, such as the automated TRANSMEM annotation used by UniProt \cite{TheUniProtConsortium2014}.
 Yet several challenges remain in separating \gls{sp}s from \gls{tmh}s \cite{Petersen2011} and correctly predicting the topology of a \gls{tmp}.
-
 
 Despite being able to identify \gls{tmh}s, our understanding of the specific biochemical role they play in the cell often requires intense study.
 As more data is becoming available bioinformatic methods that use multiple biochemical traits in conjunction with hydrophobicity are starting to be able to understand if a \gls{tmh} has a functional role beyond anchoring \cite{Wong2011, Wong2012}, and the protein trafficking signals held within some \gls{tmh}s \cite{Guna2018}.
@@ -174,16 +171,14 @@ OPM \cite{Lomize2012} and PDBTM \cite{Kozma2012} use simplified models of the me
 MemProtMD \cite{Stansfeld2015} uses explicit lipids, a phosphatidylcholine bilayer, in a flexible \gls{md} simulation  along with \gls{tmp}s accessed from the PDB \cite{Berman2000}.
 These approaches allow us to enhance our understanding of the \gls{tmp} structures in the context of the membrane environment.
 
-
-
 \section{Biological membranes}
 \subsection{Membrane lipids}
 The compartmentalisation of cellular biochemistry is arguably one of the most significant events to have occurred in evolution and is certainly one of the fundamental prerequisites for life~\cite{Koshland2002}.
 The proteins that allow life to use this biochemical barrier are perhaps equally important.
 Together, the lipid bilayer and proteins therein allow complex biochemical systems that facilitate life as we know it.
 
-It is critical to understand that the lipid bilayer and the transmembrane $\alpha$ helices are inextricably linked, and often what we observe from the $\alpha$ helices reflect the properties of the much harder to study membranes.
-For example, often \gls{tmh}s reflect the membrane environments they exist in, for example, the hydrophobicity, asymmetry, and thickness of the membrane lipids are reflected when looking at large numbers of \gls{tmp}s~\cite{Sharpe2010}.
+It is critical to understand that the lipid bilayer and the transmembrane $\alpha$ helices are inextricably linked..
+Often \gls{tmh}s reflect the membrane environments they exist in, for example, the hydrophobicity, asymmetry, and thickness of the membrane lipids are reflected when looking at large numbers of \gls{tmp}s~\cite{Sharpe2010}.
 
 The lipid membranes influence the local structure, dynamics, and activity of proteins in the membrane in non-trivial ways~\cite{Bondar2010, Bondar2009, Jardon-Valadez2010, Kalvodova2005, Urban2005, White2001a, Jensen2004, Henin2014}, as well as protein folding~\cite{Kauko2010}.
 
@@ -195,7 +190,6 @@ They consist of a polar head group and a hydrophobic region and so are described
 This factor, along with geometric constraints of the membrane lipids causes them to not only be insoluble molecules but also that they readily self-associate into complex ordered structures that have been demonstrated \textit{in silico} with coarse grain \gls{md} simulations~\cite{Scott2008}.
 This self\--association is entropically driven by water molecules.
 There is a rich variety of lipid molecules that make up the biological membranes.
-In other words, the bilayer forms from these phospholipid molecules due to the fierce dissociation between the polar water and the hydrophobic tails.
 Furthermore, the bilayer maximises van der Waals interactions between the closely-packed hydrocarbon chains, which contributes to the stability of the bilayer.
 This can be seen even in relatively early \gls{md} simulations~\cite{Goetz1998}.
 
@@ -204,18 +198,19 @@ The hydrophobicity of a membrane lipid can be caused by several features; (i) al
 Phospholipids are composed of a glycerol molecule.
 Bonded to the glycerol molecule are two hydrophobic fatty acid tail groups and a negatively-charged polar phosphate group.
 The polar phosphate group is modified with an alcohol group.
+Often these are represented as a polar head group with two fatty chains extending into the membrane, and a bilayer is formed from two sheets of these molecules with the polar headgroups facing outwards towards either side of the membrane and the fatty side chains filling the interior of the membrane space (Figure \ref{fig:history}D).
 
 %At some point the membrane phases should be discussed.
 %Similar to the diagram here perhaps: http://popups.ulg.ac.be/1780-4507/index.php?id=6568
 
-It has been known for some time that biological bi-layer membranes are asymmetric~\cite{Singer1972, OpdenKamp1979}.
-For example, in the outer membranes of Gram-negative bacteria, the outer membrane leaflet contain lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types~\cite{VanMeer2008}.
+It has been known for some time that biological bi\--layer membranes are asymmetric~\cite{Singer1972, OpdenKamp1979}.
+For example, in the outer membranes of Gram-negative bacteria, the outer membrane leaflet contains lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types~\cite{VanMeer2008}.
 Adding to the membrane asymmetry composition story, a thorough analysis of residue composition in yeast and human \gls{tmh} regions revealed intra-membrane leaflet composition asymmetry in the \gls{er}, but not the Golgi~\cite{Sharpe2010}.
 Furthermore, protein-lipid interactions have been shown to be determinants of membrane curvature~\cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch~\cite{Planque2003}.
 
-The evolutionary theories behind these various membrane compositions emerging are complex and remain in dispute.
-A popular theory is that eukaryotic cells used mitochondria as the ATP synthesisers to provide an energetic boost, the result of which was a massive shift in the evolution of novel eukaryotic protein folds, membrane\--bound organelle structures, sexual reproduction, and complex inter-cellular cooperation in the form of multicellular organisms~\cite{Lane2005, Lane2015}.
-A lot of this theory rested on the idea that mitochondrial membranes within the eukaryotic cells were energetically favourable, however, more recent experimentation disputes this claim~\cite{Lynch2017}.
+%The evolutionary theories behind these various membrane compositions emerging are complex and remain in dispute.
+%A popular theory is that eukaryotic cells used mitochondria as the ATP synthesisers to provide an energetic boost, the result of which was a massive shift in the evolution of novel eukaryotic protein folds, membrane\--bound organelle structures, sexual reproduction, and complex inter-cellular cooperation in the form of multicellular organisms~\cite{Lane2005, Lane2015}.
+%A lot of this theory rested on the idea that mitochondrial membranes within the eukaryotic cells were energetically favourable, however, more recent experimentation disputes this claim~\cite{Lynch2017}.
 
 \subsection{Membrane potential}
 Simply put, membrane potential is the voltage across a membrane.
@@ -337,7 +332,7 @@ This free energy measurement is regarded as being currently experimentally inacc
 
 Although as a trend most of the scales agree, because of the methodological differences, there are indeed variations of values even after normalisation.
 Due to these discrepancies, it is preferable and typical amongst the literature to use several scales to verify the observable trends resulting from interpretation from an individual scale.
-Notably, one of the classic scales, Kyte \& Doolittle Hydropathy scale shows a striking similarity to the modern Hessa's ${\Delta G}_{app}^{aa}$ scale, and that generally the ``better'' scales count proline as hydrophilic, and focus on helix recognition rather than amino acid analogues~\cite{Peters2014}.
+Notably, one of the classic scales, Kyte \& Doolittle Hydropathy scale shows a striking similarity to the modern Hessa's ${\Delta G}_{app}^{aa}$ scale, and that generally the ``better'' scales for \gls{tmh} prediction count proline as hydrophilic, and focus on helix recognition rather than amino acid analogues~\cite{Peters2014}.
 In $\alpha$ helices from soluble proteins, proline is almost always a helix breaker, and $\alpha$ helix prediction scales don't even attempt to quantify a proline scoring penalty, whereas they are highly tolerated in \gls{tmh}s.
 Several of the scales used throughout this thesis are overviewed below.
 
