--- a/thesis.tex
+++ b/thesis.tex
@@ -52,18 +52,19 @@
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{sp}{SP}{Signal Peptide}
 \newacronym{snare}{SNARE}{Soluble N-ethylmaleimide-sensitive factor attachment protein receptor}
-\newacronym{ks}{K\--S}{Kolmogorov-Smirnov}
-\newacronym{kw}{K\--W}{Kruskal-Wallis}
-\newacronym{gpcr}{GPCR}{G protein-–coupled receptor}
+\newacronym{ks}{K\--S}{Kolmogorov\--Smirnov}
+\newacronym{kw}{K\--W}{Kruskal\--Wallis}
+\newacronym{gpcr}{GPCR}{G protein\--coupled receptor}
 \newacronym{htl}{HTL}{Holotranslocon}
 \newacronym{rna}{RNA}{Ribonucleic Acid}
 \newacronym{srp}{SRP}{Signal Recognition Particle}
 \newacronym{sr}{SR}{Signal Recognition Particle Receptor}
 \newacronym{ap}{AP}{Arrest Peptide}
 \newacronym{emc}{EMC}{ER Membrane protein Complex}
-\newacronym{em}{EM}{Electron microscopy}
-\newacronym{tom}{TOM}{Translocase of the outer membrane}
-\newacronym{mom}{MOM}{Mitochondrial outer membrane}
+\newacronym{em}{EM}{Electron Microscopy}
+\newacronym{tom}{TOM}{Translocase of the Outer Membrane}
+\newacronym{tim}{TIM}{Translocase of the Inner Membrane}
+\newacronym{mom}{MOM}{Mitochondrial Outer Membrane}
 
 
 
@@ -132,7 +133,7 @@ This thesis demonstrates three features of membrane proteins:
 \end{itemize}
 
 These results will go on to inform more specific studies about membrane proteins.
-Hopefully, these findings will provide some insight into the workings of some genetic diseases as well as drug targets in the case of pathogenic infections and cancers.
+These findings will provide insight into the causes of some genetic diseases as well as drug targets in the case of pathogenic infections and cancers.
 
 
 
